@@ -7,16 +7,11 @@ import uvicorn
 
 import cems2.API.api as api
 from cems2 import log
+from cems2.API.routes.monitoring import monitoring_controller
 from cems2.cloud_analytics.manager import Manager as CloudAnalyticsManager
 from cems2.machines_control.manager import Manager as MachinesControlManager
 
 LOG = log.get_logger(__name__)
-
-# Create the Cloud Analytics Manager
-cloud_analytics_manager = CloudAnalyticsManager()
-
-# Create the Machine Control Manager
-machines_control_manager = MachinesControlManager()
 
 
 async def start_api():
@@ -62,6 +57,14 @@ async def main():
     """
     LOG.info("Starting CEMS2")
 
+    # Create the Cloud Analytics Manager
+    cloud_analytics_manager = CloudAnalyticsManager()
+    print("MAIN:", id(cloud_analytics_manager))
+    print("MAIN:", cloud_analytics_manager)
+
+    # Pass the cloud_analytics_manager to the monitoring manager
+    monitoring_controller.set_cloud_analytics_manager(cloud_analytics_manager)
+
     # Create 3 tasks to run in parallel
     async with trio.open_nursery() as nursery:
         # Start the API (Task 1)
@@ -69,7 +72,7 @@ async def main():
         # Start the Cloud Analytics Manager (Task 2)
         nursery.start_soon(start_cloud_analytics_manager, cloud_analytics_manager)
         # Start the Machine Control Manager (Task 3)
-        nursery.start_soon(start_machines_control_manager, machines_control_manager)
+        # nursery.start_soon(start_machines_control_manager, machines_control_manager)
 
 
 if __name__ == "__main__":
