@@ -34,8 +34,6 @@ class Manager(object):
         self.pm_connectors = pm_connectors
         LOG.debug("Physical Machines Connectors loaded: %s", pm_connectors_list)
 
-    # TODO: Apagados y encendidos de máquinas dinamicos -> Como se decide que conectores se usan?
-
     def get_installed_plugins(self):
         """Get the list of installed Physical Machines connectors.
 
